[MVT] OSR compilation fails with "assert(tk->is_loaded()) failed: must be loaded"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/graphKit.cpp:3105), pid=16970, tid=16996
      # assert(tk->is_loaded()) failed: must be loaded

      Stack: [0x00007f40da0ad000,0x00007f40da1ae000], sp=0x00007f40da1aa8b0, free space=1014k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x18d2cac] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x18d3adf] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xb835e2] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
      V [libjvm.so+0xe74311] GraphKit::gen_checkcast(Node*, Node*, Node**)+0x5a1
      V [libjvm.so+0x15814e4] Parse::check_interpreter_type(Node*, Type const*, SafePointNode*&)+0xe4
      V [libjvm.so+0x1586d4d] Parse::load_interpreter_state(Node*)+0x96d
      V [libjvm.so+0x158e39e] Parse::Parse(JVMState*, ciMethod*, float)+0xa6e
      V [libjvm.so+0x8cd01c] ParseGenerator::generate(JVMState*)+0x1dc
      V [libjvm.so+0xae13da] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xfda
      V [libjvm.so+0x8ca412] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
      V [libjvm.so+0xaed82b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3eb
      V [libjvm.so+0xaee4b1] CompileBroker::compiler_thread_loop()+0x291
      V [libjvm.so+0x180f63e] JavaThread::thread_main_inner()+0x24e
      V [libjvm.so+0x180f8c8] JavaThread::run()+0x1c8
      V [libjvm.so+0x1523c2a] thread_native_entry(Thread*)+0xfa
      C [libpthread.so.0+0x76ba] start_thread+0xca

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: