8191766: [MVT] OSR compilation fails with "assert(tk->is_loaded()) failed: must be loaded"

Removed the assert that was added by JDK-8183111 because it is too strong.